[package]
name = "solana-winternitz"
description = "224-bit Keccak-based Winternitz signatures for Solana"
authors = ["Dean Little <@deanmlittle>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
solana-nostd-keccak = "0.1.3"
arrayref = "0.3.9"
rand = { version = "0.8.5", optional = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
rand = { version = "0.8.5" }