[package]
name = "solana-winternitz"
description = "Keccak-based Winternitz signatures for Solana"
authors = ["Dean Little <@deanmlittle>"]
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
solana-nostd-sha256 = "0.1.3"
solana-nostd-keccak = "0.1.3"
arrayref = "0.3.9"
rand = { version = "0.9.0", optional = true }

[dev-dependencies]
hex = "0.4.3"

[target.'cfg(not(target_os = "solana"))'.dependencies]
rand = { version = "0.9.0" }