[package]
name = "solana-winternitz"
description = "Winternitz signatures for Solana"
authors = ["Dean Little <@deanmlittle>"]
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
arraystring = "0.3.0"
bip32 = { version = "0.5.3", optional = true }
hex = { version = "0.4.3" }
solana-nostd-sha256 = "0.1.3"
solana-nostd-keccak = "0.1.3"
rand = { version = "0.9.0", optional = true }
fd_bs58 = "0.1.0"

[target.'cfg(not(target_os = "solana"))'.dependencies]
rand = { version = "0.9.0" }
bip32 = "0.5.3"
